docs/content/concepts/scenarios/kind-scenario/yamls/syncer-kind.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kcp-syncer-kind-37zv5s0u
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: kcp-syncer-kind-37zv5s0u
  namespace: kcp-syncer-kind-37zv5s0u
---
apiVersion: v1
kind: Secret
metadata:
  name: kcp-syncer-kind-37zv5s0u-token
  namespace: kcp-syncer-kind-37zv5s0u
  annotations:
    kubernetes.io/service-account.name: kcp-syncer-kind-37zv5s0u
type: kubernetes.io/service-account-token
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: kcp-syncer-kind-37zv5s0u
rules:
- apiGroups:
  - ""
  resources:
  - namespaces
  verbs:
  - "create"
  - "get"
  - "list"
  - "watch"
  - "delete"
- apiGroups:
  - ""
  resources:
  - endpoints
  verbs:
  - "get"
- apiGroups:
  - "apiextensions.k8s.io"
  resources:
  - customresourcedefinitions
  verbs:
  - "get"
  - "watch"
  - "list"
- apiGroups:
  - "networking.k8s.io"
  resources:
  - networkpolicies
  verbs:
  - "create"
  - "list"
  - "watch"
- apiGroups:
  - ""
  resources:
  - configmaps
  - pods
  - pods/log
  - pods/exec
  - pods/attach
  - pods/binding
  - pods/portforward
  - pods/proxy
  - pods/ephemeralcontainers
  - secrets
  - services
  verbs:
  - "*"
- apiGroups:
  - "apps"
  resources:
  - deployments
  verbs:
  - "*"
- apiGroups:
  - "networking.k8s.io"
  resources:
  - ingresses
  verbs:
  - "*"
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: kcp-syncer-kind-37zv5s0u
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: kcp-syncer-kind-37zv5s0u
subjects:
- kind: ServiceAccount
  name: kcp-syncer-kind-37zv5s0u
  namespace: kcp-syncer-kind-37zv5s0u
---
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: kcp-dns-kind-37zv5s0u
  namespace: kcp-syncer-kind-37zv5s0u
rules:
- apiGroups:
  - ""
  resources:
  - serviceaccounts
  - services
  verbs:
  - "create"
  - "get"
  - "list"
  - "update"
  - "delete"
  - "watch"
- apiGroups:
  - ""
  resources:
  - endpoints
  verbs:
  - "get"
  - "list"
  - "watch"
- apiGroups:
  - "apps"
  resources:
  - deployments
  verbs:
  - "create"
  - "get"
  - "list"
  - "update"
  - "delete"
  - "watch"
- apiGroups:
  - "rbac.authorization.k8s.io"
  resources:
  - roles
  - rolebindings
  verbs:
  - "create"
  - "get"
  - "list"
  - "update"
  - "delete"
  - "watch"
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: kcp-dns-kind-37zv5s0u
  namespace: kcp-syncer-kind-37zv5s0u
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: kcp-dns-kind-37zv5s0u
subjects:
  - kind: ServiceAccount
    name: kcp-syncer-kind-37zv5s0u
    namespace: kcp-syncer-kind-37zv5s0u
---
apiVersion: v1
kind: Secret
metadata:
  name: kcp-syncer-kind-37zv5s0u
  namespace: kcp-syncer-kind-37zv5s0u
stringData:
  kubeconfig: |
    apiVersion: v1
    kind: Config
    clusters:
    - name: default-cluster
      cluster:
        certificate-authority-data: <certificate>
        server: https://<kcp-url>:6443
    contexts:
    - name: default-context
      context:
        cluster: default-cluster
        namespace: default
        user: default-user
    current-context: default-context
    users:
    - name: default-user
      user:
        token: <token>
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kcp-syncer-kind-37zv5s0u
  namespace: kcp-syncer-kind-37zv5s0u
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: kcp-syncer-kind-37zv5s0u
  template:
    metadata:
      labels:
        app: kcp-syncer-kind-37zv5s0u
    spec:
      containers:
      - name: kcp-syncer
        command:
        - /ko-app/syncer
        args:
        - --from-kubeconfig=/kcp/kubeconfig
        - --sync-target-name=kind
        - --sync-target-uid=8df305e7-f4f8-439f-9115-51054d519361
        - --from-cluster=br3qimk2t1o3jb70
        - --api-import-poll-interval=1m0s
        - --downstream-namespace-clean-delay=30s
        - --qps=20
        - --burst=30
        - --dns-image=ghcr.io/kcp-dev/kcp/syncer:v0.11.0
        env:
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: ghcr.io/kcp-dev/kcp/syncer:v0.11.0
        imagePullPolicy: IfNotPresent
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - name: kcp-config
          mountPath: /kcp/
          readOnly: true
      serviceAccountName: kcp-syncer-kind-37zv5s0u
      volumes:
        - name: kcp-config
          secret:
            secretName: kcp-syncer-kind-37zv5s0u
            optional: false
